--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -9,3 +9,18 @@
   gap: 20px;
   align-items: flex-end;
 }
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-left: 100px;
+  }
+  .header__wrapper {
+    gap: 30px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
+    padding-left: 60px;
+  }
+}
