--- a/css/blocks/container.css
+++ b/css/blocks/container.css
@@ -1,16 +1,16 @@
-.page__wrapper {
+.container {
   padding-left: 28px;
   padding-right: 20px;
 }
 
 @media screen and (min-width: 768px) {
-  .page__wrapper {
+  .container {
     padding-left: 100px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .page__wrapper {
+  .container {
     padding-left: 240px;
   }
 }
