--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('./layout.css');
 @import url('./common.css');
-@import url('./blocks/page.css');
+@import url('./blocks/container.css');
 @import url('./blocks/sidebar.css');
 @import url('./blocks/logo.css');
 @import url('./blocks/nav.css');
