--- a/css/blocks/sidebar.css
+++ b/css/blocks/sidebar.css
@@ -23,13 +23,17 @@
   width: 48px;
   height: 106px;
   background: url('../../img/sidebar-union.svg');
-  cursor: pointer;
   position: absolute;
   right: -48px;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.sidebar__menu button {
+  border: none;
+  cursor: pointer;
 }
 
 .sidebar__menu svg {
