add styles for cards

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,6 @@
 @import url('./blocks/icon.css');
 @import url('./blocks/header.css');
 @import url('./blocks/input.css');
+@import url('./blocks/main.css');
+@import url('./blocks/cards.css');
+@import url('./blocks/card.css');
