add function and styles for scrolling

--- a/css/blocks/cards.css
+++ b/css/blocks/cards.css
@@ -5,6 +5,15 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 15px;
+  margin-top: 160px;
+  position: relative;
+  z-index: 50;
+}
+
+@media screen and (min-width: 768px) {
+  .cards {
+    margin-top: 200px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
