--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -17,6 +17,9 @@
   display: none;
 }
 
+.header--fixed .input--icon-search::before {
+  display: none;
+}
 .header__wrapper {
   display: flex;
   flex-direction: column;
@@ -29,6 +32,9 @@
 @media screen and (min-width: 768px) {
   .header__wrapper {
     gap: 30px;
+  }
+  .header--fixed .input--icon-search::before {
+    display: block;
   }
 }
 
