--- a/css/blocks/cards.css
+++ b/css/blocks/cards.css
@@ -1,9 +1,16 @@
 .cards__list {
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 15px;
   margin-top: 160px;
   position: relative;
@@ -11,12 +18,15 @@
 }
 
 @media screen and (min-width: 768px) {
-  .cards {
+  .cards__list {
     margin-top: 200px;
   }
 }
 
 @media screen and (min-width: 1440px) {
+  .cards__list {
+    margin-top: 120px;
+  }
   .cards {
     padding-left: 20px;
   }
