--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -20,11 +20,19 @@
 .header--fixed .input--icon-search::before {
   display: none;
 }
+
 .header__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 20px;
-  align-items: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 
@@ -41,6 +49,8 @@
 @media screen and (min-width: 1440px) {
   .header__wrapper {
     padding-left: 60px;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
